--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
@@ -13,8 +20,12 @@
   }
 }
 
+body {
+  background-color: black;
+  color: white;
+}
+
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +35,18 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background-color: white !important;
+  color: black;
+  margin: 20px;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.card {
+  margin-top: 30px;
 }
 
 @keyframes App-logo-spin {
